Milestone 3 implementation