@@ -6,11 +6,11 @@ import com.infosys.volunteer.management.entity.User;
 import com.infosys.volunteer.management.repository.UserRepository;
 import com.infosys.volunteer.management.service.UserService;
 import com.infosys.volunteer.management.session.SessionManager;
+import org.springframework.http.HttpStatus;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.Optional;
+import org.springframework.web.server.ResponseStatusException;
 
 @Service
 @Transactional
@@ -20,21 +20,28 @@ public class UserServiceImpl implements UserService {
     private final PasswordEncoder passwordEncoder;
     private final SessionManager sessionManager;
 
-    public UserServiceImpl(UserRepository userRepository,
-                           PasswordEncoder passwordEncoder,
-                           SessionManager sessionManager) {
+    public UserServiceImpl(
+            UserRepository userRepository,
+            PasswordEncoder passwordEncoder,
+            SessionManager sessionManager) {
+
         this.userRepository = userRepository;
         this.passwordEncoder = passwordEncoder;
         this.sessionManager = sessionManager;
     }
 
+    /* ================= REGISTER ================= */
     @Override
     public String registerUser(UserDTO userDTO) {
+
         if (userDTO == null || userDTO.getEmailId() == null) {
-            throw new IllegalArgumentException("Invalid user data");
+            throw new ResponseStatusException(
+                    HttpStatus.BAD_REQUEST, "Invalid user data");
         }
+
         if (userRepository.existsByEmailId(userDTO.getEmailId())) {
-            throw new RuntimeException("User already exists with emailId: " + userDTO.getEmailId());
+            throw new ResponseStatusException(
+                    HttpStatus.CONFLICT, "User already exists");
         }
 
         User user = new User();
@@ -42,93 +49,125 @@ public class UserServiceImpl implements UserService {
         user.setPassword(passwordEncoder.encode(userDTO.getPassword()));
         user.setPhoneNo(userDTO.getPhoneNo());
         user.setAddress(userDTO.getAddress());
+        user.setName(userDTO.getName());
         user.setUserRole(userDTO.getUserRole().toUpperCase());
 
         userRepository.save(user);
-        return "Success!";
+        return "Registration successful";
     }
 
+    /* ================= LOGIN ================= */
     @Override
     public String login(AuthDTO authDTO) {
-        if (authDTO == null || authDTO.getEmailId() == null) {
-            throw new IllegalArgumentException("Invalid login data");
+
+        User user = userRepository.findByEmailId(authDTO.getEmailId())
+                .orElseThrow(() ->
+                        new ResponseStatusException(
+                                HttpStatus.UNAUTHORIZED,
+                                "Invalid email or password"
+                        )
+                );
+
+        if (!passwordEncoder.matches(
+                authDTO.getPassword(), user.getPassword())) {
+            throw new ResponseStatusException(
+                    HttpStatus.UNAUTHORIZED,
+                    "Invalid email or password"
+            );
         }
 
-        Optional<User> opt = userRepository.findByEmailId(authDTO.getEmailId());
-        User user = opt.orElseThrow(() -> new RuntimeException("User not found"));
-
-        if (!passwordEncoder.matches(authDTO.getPassword(), user.getPassword())) {
-            throw new RuntimeException("Invalid credentials");
-        }
-
-        String sessionId = sessionManager.createSession(user.getEmailId());
-        return sessionId;
+        return sessionManager.createSession(user.getEmailId());
     }
 
+    /* ================= UPDATE PROFILE ================= */
     @Override
     public String updateUser(UserDTO userDTO) {
-        if (userDTO == null || userDTO.getEmailId() == null) {
-            throw new IllegalArgumentException("Invalid request");
-        }
-        Optional<User> opt = userRepository.findByEmailId(userDTO.getEmailId());
-        User user = opt.orElseThrow(() -> new RuntimeException("User not found"));
 
-        if (userDTO.getPhoneNo() != null) user.setPhoneNo(userDTO.getPhoneNo());
-        if (userDTO.getAddress() != null) user.setAddress(userDTO.getAddress());
-        if (userDTO.getUserRole() != null) user.setUserRole(userDTO.getUserRole());
+        User user = userRepository.findByEmailId(userDTO.getEmailId())
+                .orElseThrow(() ->
+                        new ResponseStatusException(
+                                HttpStatus.NOT_FOUND, "User not found"
+                        )
+                );
+
+        if (userDTO.getName() != null) {
+            user.setName(userDTO.getName());
+        }
+        if (userDTO.getPhoneNo() != null) {
+            user.setPhoneNo(userDTO.getPhoneNo());
+        }
+        if (userDTO.getAddress() != null) {
+            user.setAddress(userDTO.getAddress());
+        }
 
         userRepository.save(user);
-        return "Update successful";
+        return "Profile updated successfully";
     }
 
+    /* ================= RESET PASSWORD (FIXED SAFELY) ================= */
     @Override
-    public String resetPassword(UserDTO userDTO) {
-        if (userDTO == null || userDTO.getEmailId() == null) {
-            throw new IllegalArgumentException("emailId is required");
-        }
-        // newPassword must be provided
-        if (userDTO.getNewPassword() == null || userDTO.getNewPassword().isBlank()) {
-            throw new IllegalArgumentException("newPassword is required");
-        }
-        // oldPassword must be provided
-        if (userDTO.getOldPassword() == null || userDTO.getOldPassword().isBlank()) {
-            throw new IllegalArgumentException("oldPassword is required");
+    public String resetPassword(String emailId, String newPassword) {
+
+        if (emailId == null || newPassword == null || newPassword.trim().isEmpty()) {
+            throw new ResponseStatusException(
+                    HttpStatus.BAD_REQUEST,
+                    "Email and new password are required"
+            );
         }
 
-        Optional<User> opt = userRepository.findByEmailId(userDTO.getEmailId());
-        User user = opt.orElseThrow(() -> new RuntimeException("User not found"));
+        User user = userRepository.findByEmailId(emailId)
+                .orElseThrow(() ->
+                        new ResponseStatusException(
+                                HttpStatus.NOT_FOUND, "User not found"
+                        )
+                );
 
-        // Verify old password matches stored (BCrypt)
-        if (!passwordEncoder.matches(userDTO.getOldPassword(), user.getPassword())) {
-            throw new RuntimeException("Old password is incorrect");
+        // 🚫 Prevent same password reset
+        if (passwordEncoder.matches(newPassword, user.getPassword())) {
+            throw new ResponseStatusException(
+                    HttpStatus.BAD_REQUEST,
+                    "New password must be different from old password"
+            );
         }
 
-        // Everything OK — update to new password (hash it)
-        user.setPassword(passwordEncoder.encode(userDTO.getNewPassword()));
+        // ✅ Proper hashing
+        user.setPassword(passwordEncoder.encode(newPassword));
         userRepository.save(user);
+
         return "Password reset successful";
     }
 
-
+    /* ================= PROFILE ================= */
     @Override
     public UserDTO getProfile(String emailId) {
-        if (emailId == null) throw new IllegalArgumentException("emailId required");
-        Optional<User> opt = userRepository.findByEmailId(emailId);
-        User user = opt.orElseThrow(() -> new RuntimeException("User not found"));
 
-        UserDTO resp = new UserDTO();
-        resp.setEmailId(user.getEmailId());
-        resp.setPhoneNo(user.getPhoneNo());
-        resp.setAddress(user.getAddress());
-        resp.setUserRole(user.getUserRole());
-        return resp;
+        User user = userRepository.findByEmailId(emailId)
+                .orElseThrow(() ->
+                        new ResponseStatusException(
+                                HttpStatus.NOT_FOUND, "User not found"
+                        )
+                );
+
+        UserDTO dto = new UserDTO();
+        dto.setEmailId(user.getEmailId());
+        dto.setName(user.getName());
+        dto.setPhoneNo(user.getPhoneNo());
+        dto.setAddress(user.getAddress());
+        dto.setUserRole(user.getUserRole());
+
+        return dto;
     }
 
+    /* ================= LOGOUT ================= */
     @Override
     public String logout(String sessionId) {
-        if (sessionId == null || !sessionManager.isValidSession(sessionId)) {
-            throw new RuntimeException("Invalid or expired session");
+
+        if (!sessionManager.isValidSession(sessionId)) {
+            throw new ResponseStatusException(
+                    HttpStatus.UNAUTHORIZED, "Invalid session"
+            );
         }
+
         sessionManager.destroySession(sessionId);
         return "Logout successful";
     }
